tests/ui/proc-macro/issue-83469-global-alloc-invalid-stmt.stderr
error: allocators must be statics
  --> $DIR/issue-83469-global-alloc-invalid-stmt.rs:7:5
   |
LL |     fn inner() {}
   |     ^^^^^^^^^^^^^

error: aborting due to 1 previous error

